WIP: userServiceTest